Bug 1378710 - Disable OMTA if there is a mask applied on any ancestor of the animation target. r=mstange

MozReview-Commit-ID: 7he4qvf5Ekb